KIBON-1898: implemente zurueck-an-gemeinde, fix falsche angaben visiblity, fix permissions

--- a/ebegu-web/src/app/gemeinde-antraege/gemeinde-antraege/antrag/freigabe/freigabe.component.less
+++ b/ebegu-web/src/app/gemeinde-antraege/gemeinde-antraege/antrag/freigabe/freigabe.component.less
@@ -15,3 +15,12 @@
  * along with this program. If not, see <https://www.gnu.org/licenses/>.
  */
 
+.actions {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 10rem;
+
+    & > dv-loading-button {
+        margin: 0 5px;
+    }
+}
